client: add plugin panel support gpuhd: add panel, show on quest start, cleanup config